# OpenSpin

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Info.plist  OpenSpin.sln  OpenSpin.vcxproj  OpenSpin.vcxproj.filters  README.md  appveyor.yml  build_for_iOS.sh
OpenSpin-iOS/: Info.plist  OpenSpin-iOS.h
OpenSpin.xcodeproj/: project.pbxproj
OpenSpin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenSpin.xcodeproj/project.xcworkspace/xcshareddata/: OpenSpin.xccheckout
OpenSpin.xcodeproj/xcuserdata/mickaelb.xcuserdatad/xcschemes/: OpenSpin-iOS.xcscheme  OpenSpin.xcscheme  src.xcscheme  xcschememanagement.plist
cmake/: FindSDL2.cmake  FindTINYXML2.cmake
include/: LoadImage.h
res/: config.rc
src/: Emulator.cpp  Emulator.h  Frontend.cpp  Frontend.h  FrontendSetting.cpp  FrontendSetting.h  LoadImage.cpp  LoadImage.h  MainMenuSetting.cpp  MainMenuSetting.h  MainSettings.cpp  MainSettings.h  Media.cpp  Media.h  Settings.cpp  Settings.h  System.cpp  System.h  SystemSetting.cpp  SystemSetting.h  ini.h  main.cpp
toolchain/: iOS.cmake
